syntax = "proto3";

package tech.figure.document;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "tech/figure/util/util.proto";
import "validate/validate.proto";

message DocumentMetadata {
  string  id   = 1 [(validate.rules).string.uuid = true];
  string                 uri              = 10;
  string                 name             = 12;
  string                 document_type    = 13; // See DocumentExpectedType
  string                 extension        = 14;
  string                 context          = 15;
  string                 description      = 16;
  string                 sha512_hash      = 11;
  string                 md5_sum          = 17;
  repeated DataAuthority data_authorities = 18;
  bool                   has_signature    = 19;
  repeated Tag           tags             = 20;
  Signature              signature        = 22; // Digital signature of third-party digitally signed documents
}

message DataAuthority {
  string  id   = 1 [(validate.rules).string.uuid = true];
  string                public_key = 2;
  string                data_key   = 3;
  string                nonce      = 4;
}

message Tag {
  string  id   = 1 [(validate.rules).string.uuid = true];
  string                tag_type = 2; // See TagExpectedType
}

message Signature {
  string  id   = 1 [(validate.rules).string.uuid = true];
  string                    signature                      = 10;
  google.protobuf.Timestamp time_received_from_third_party = 11;
  string                    vendor_name                    = 12; // See VendorName
  string                    packet_type                    = 13;
}